Fixed hr on mobile

--- a/portfolio/src/Navbar/Navbar.css
+++ b/portfolio/src/Navbar/Navbar.css
@@ -17,7 +17,7 @@
   transition: 0.75s ease;
 }
 
-hr {
+.navHr {
   display: block;
   height: 1px;
   border: 0;
@@ -27,7 +27,7 @@ hr {
   transition: 0.75s ease;
 }
 
-.link:hover hr {
+.link:hover .navHr {
   background-image: linear-gradient(
     90deg,
     transparent,
@@ -44,7 +44,7 @@ hr {
     width: 15rem;
   }
 
-  hr {
+  .navHr {
     width: 15rem;
     background-image: linear-gradient(
       90deg,
