--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -38,3 +38,10 @@ button:hover {
 a:link {
   text-decoration: none;
 }
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
